--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
 atm.api=https://www.ing.nl/api/locator/atms/
 server.port=8761
-spring.application.name = eureka-server
+spring.application.name = eureka-server-from-config-server
 #spring.profiles.active=security
