--- a/eureka-server.properties
+++ b/eureka-server.properties
@@ -1,4 +1,4 @@
-atm.api=https://www.ing.nl/api/locator/atms/
+atm.api=https://www.ing.nl/api/locator/atms/sanjay
 server.port=8761
 spring.application.name = updated-eureka-server-from-MicroService-Specific-Config-Server
 #spring.profiles.active=security
