--- a/application.properties
+++ b/application.properties
@@ -2,3 +2,4 @@ atm.api=https://www.ing.nl/api/locator/atms/
 server.port=8081
 spring.application.name = eureka-server-from-config-server
 #spring.profiles.active=security
+spring.cloud.config.allowOverride=true
