--- a/application.properties
+++ b/application.properties
@@ -3,3 +3,5 @@ server.port=8081
 spring.application.name = eureka-server-from-config-server
 #spring.profiles.active=security
 spring.cloud.config.allowOverride=true
+spring.cloud.config.overrideSystemProperties=false
+spring.cloud.config.overrideNone=true
